--- a/PetSlot/src/main/resources/application.properties
+++ b/PetSlot/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.servlet.multipart.max-request-size=10MB
 
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+
+google.client-id=51593724276-mrejr24evg2oqgnt7cjl64lr4djpb0a7.apps.googleusercontent.com
+google.client-secret=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
+
