--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
     "axios": "^1.7.7",
+    "express": "^4.21.1",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
