--- a/PetSlot/pom.xml
+++ b/PetSlot/pom.xml
@@ -70,6 +70,12 @@
 			<version>1.33.0</version> <!-- Check for the latest version -->
 		</dependency>
 		<dependency>
+			<groupId>com.google.http-client</groupId>
+			<artifactId>google-http-client-jackson2</artifactId>
+			<version>1.41.5</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.google.auth</groupId>
 			<artifactId>google-auth-library-oauth2-http</artifactId>
 			<version>0.26.0</version> <!-- Check for the latest version -->
