--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.7",
     "express": "^4.21.1",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
+    "razorpay": "^2.9.4",
     "react": "^18.0.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.0.0",
